# CDNN

./: .gitignore  CMakeLists.txt  LISENCE
docs/: 交换格式.md  总规范.md  指针归属权.md
include/: Dataloader.h  Dataset.h  F.h  Layer.h  Loss.h  Module.h  Optim.h  Sql.h  Tensor.h  Types.h
py/: linear_install.py  mnist_install.py
src/: Dataloader.c  Dataset.c  F.c  Layer.c  Loss.c  Module.c  Optim.c  Tensor.c
test/: linear_test.c  module_test.c  serialize_test.c  tensor_test.c
